registry/registry/ingress-clement.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: registry-clement
  namespace: registry
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - registry.thuault.com
    secretName: registry-tls-clement
  rules:
  - host: registry.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
